Update heading in index.html for clarity in MRI visualization

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
             <img src="data:image/png;base64,{{ mask_image }}" alt="Máscara">
         </div>
         <div class="image-container">
-            <h2>MRI y Mascara</h2>
+            <h2>MRI y Mascara del MRI</h2>
             <img src="data:image/png;base64,{{ combined_image }}" alt="Imagen Combinada">
         </div>
         <div>
